[package]
name = "cardinal"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[build-dependencies]

[[bin]]
name = "cardinal"
path = "src/main.rs"